# doukutsu-rs-libretro

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  Readme.md
res/: doukutsu_rs_libretro.info
src/: core.rs  libretro.rs
