[package]
name = "doukutsu-rs-libretro"
description = "doukutsu-rs targeted for Retroarch"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
log = "0.4"
doukutsu-rs = { git = "https://github.com/DrGlaucous/doukutsu-rs-nm.git", rev = "a3932636a221c66d81a56f3f45174d137ad228f2", default-features = false, features = ["default-base", "backend-libretro"]}


