[package]
name = "doukutsu-rs-libretro"
description = "doukutsu-rs targeted for Retroarch"
version = "1.2.0"
edition = "2021"

[lib]
name = "doukutsu_rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
log = "0.4"
doukutsu-rs = { git = "https://github.com/DrGlaucous/doukutsu-rs-nm.git", rev = "6a73937039de3188d9067c5c8da350cb2adb98d1", default-features = false, features = ["default-base", "backend-libretro"]}


