[package]
name = "doukutsu-rs-libretro"
description = "doukutsu-rs targeted for Retroarch"
version = "1.2.1"
edition = "2021"

[lib]
name = "doukutsu_rs"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
log = "0.4"
doukutsu-rs = { git = "https://github.com/DrGlaucous/doukutsu-rs-nm.git", rev = "720a80295c75275cdb37581091454dcbbe7c5e8d", default-features = false, features = ["default-base", "backend-libretro"]}


